--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,7 @@
 [package]
 name = "clipse"
+description = "a cli clipboard manager for linux"
+license = "MIT"
 version = "0.1.0"
 edition = "2021"
 
