--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,12 @@ repository = "https://github.com/frroossst/clipse-rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+crossterm = "0.27.0"
+ratatui = "0.25.0"
+
+
+# optimise for size
+[profile.release]
+lto = true
+opt-level = "z"
+debug = false
