--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,5 @@
 [package]
 name = "clipse"
-author = "Adhyan H"
 description = "a cli clipboard manager for linux"
 license = "MIT"
 version = "0.1.0"
@@ -10,8 +9,10 @@ repository = "https://github.com/frroossst/clipse-rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.4.11", features = ["derive"] }
 crossterm = "0.27.0"
 ratatui = "0.25.0"
+sha2 = "0.10.8"
 
 
 # optimise for size
@@ -19,3 +20,4 @@ ratatui = "0.25.0"
 lto = true
 opt-level = "z"
 debug = false
+
