--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/frroossst/clipse-rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bincode = "1.3.3"
 clap = { version = "4.4.11", features = ["derive"] }
 crossterm = "0.27.0"
 ratatui = "0.25.0"
