--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,10 @@ repository = "https://github.com/frroossst/clipse-rs"
 [dependencies]
 bincode = "1.3.3"
 clap = { version = "4.4.11", features = ["derive"] }
+confy = "0.5.1"
 crossterm = "0.27.0"
 ratatui = "0.25.0"
+serde = { version = "1.0.193", features = ["derive"] }
 sha2 = "0.10.8"
 
 
