--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ repository = "https://github.com/frroossst/clipse-rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+xclip = []
+
 [dependencies]
 bincode = "1.3.3"
 clap = { version = "4.4.11", features = ["derive"] }
@@ -16,7 +19,6 @@ crossterm = "0.27.0"
 ratatui = "0.25.0"
 serde = { version = "1.0.193", features = ["derive"] }
 sha2 = "0.10.8"
-
 
 # optimise for size
 [profile.release]
